<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+about/app"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="left"
        android:text="@string/app"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+about/appdesc"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center_horizontal|left"
        android:text="@string/appdesc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+about/versao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+about/ok"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:text="OK" />

</LinearLayout>